# acertana

./: .gitignore  Anchor.toml  LICENSE  README.md
app/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
app/assets-src/: icon.html  og.html  render-og.mjs
app/public/: manifest.webmanifest  robots.txt  sitemap.xml
app/src/: App.tsx  index.css  main.tsx
app/src/lib/: api.ts  commitError.test.ts  commitError.ts  fixtures.ts  pendingPicks.ts  router.ts  scoring.ts  seo.test.ts  seo.ts  teams.test.ts  teams.ts
app/src/pages/: CreatePoolPage.test.tsx  CreatePoolPage.tsx  FixtureRow.tsx  JoinPage.test.tsx  JoinPage.tsx  LandingPage.css  LandingPage.tsx  MyPoolsPage.test.tsx  MyPoolsPage.tsx  PoolPage.test.tsx  PoolPage.tsx
backend/: .env.example  Dockerfile  README.md  fixtures.seed.json  package-lock.json  package.json  tsconfig.json
backend/src/: auth.ts  crypto.ts  db.ts  fixtureAuthority.ts  fixtureSync.ts  joinCodes.ts  leaderboard.ts  main.ts  program.ts  registerFixtures.ts  results.ts  revealWorker.ts  scoring.ts  server.ts
backend/test/: api.test.ts  approval.test.ts  backfill.test.ts  crypto.test.ts  fixtureSync.test.ts  hardening.test.ts  joinCodes.test.ts  leaderboard.test.ts  leaderboardApi.test.ts  poolInfo.test.ts  poolPicksApi.test.ts  results.test.ts  revealWorker.test.ts  scoring.test.ts  stats.test.ts  txlineClient.test.ts
docs/: BUILD_LOG.md  DECISIONS.md  GOALS.md
programs/acertana/: Cargo.toml
programs/acertana/src/: lib.rs
programs/acertana/tests/: integration.rs
tests/fixtures/: fixture-authority.json
(+21 files in other folders)
