[package]
name = "acertana"
version = "0.1.0"
description = "Acertana: on-chain pick commitment for a free-to-play World Cup prediction pool"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "acertana"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
