[package]
name = "acertana"
version = "0.1.0"
description = "Acertana: on-chain pick commitment for a free-to-play World Cup prediction pool"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "acertana"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"

[dev-dependencies]
litesvm = "0.6"
serde_json = "1"
sha2 = "0.10"
solana-keccak-hasher = "2"
solana-sdk = "2"
